23_power_rec/grade.txt
Grading at Fri May  1 08:26:26 UTC 2020
Attempting to compile power.c
power.c: In function ‘power’:
power.c:5:21: error: initializer element is not constant
   static unsigned a=x;
                     ^
The code did not compile!

Overall Grade: F
